--- a/app.kv
+++ b/app.kv
@@ -273,7 +273,7 @@ ScreenManager:
                                 text: "Inventory Manager"
                                 font_style: "H3"
                                 halign: "left"
-                                pos_hint: {'center_x': 0.52, 'center_y': 1}
+                                pos_hint: {'center_x': 0.51, 'center_y': 1}
                                 size_hint: 1, 0.1
 
                         MDBoxLayout:
@@ -289,43 +289,64 @@ ScreenManager:
 
                                         MDCard:
                                                 MDRelativeLayout:
+                                                        FitImage:
+                                                                source: "assets/wood.png"
+                                                                pos_hint: {"top": 1}
+                                                                radius: (dp(16), dp(16), dp(16), dp(16))
 
                                                         MDIconButton:
                                                                 icon: "plus"
-                                                                pos_hint: {"top": 1, "right": 1}
+                                                                pos_hint: {"top": 0.98, "right": 0.98}
+                                                                md_bg_color: "white"
                                                                 icon_size: 70
 
                                                         MDLabel:
                                                                 text: "Wood"
+                                                                theme_text_color: "Custom"
+                                                                text_color: "white"
                                                                 font_size: 50
                                                                 adaptive_size: True
                                                                 pos: "15dp", "15dp"
                                                                 bold: True
                                         MDCard:
                                                 MDRelativeLayout:
+                                                        FitImage:
+                                                                source: "assets/silicone.png"
+                                                                pos_hint: {"top": 1}
+                                                                radius: (dp(16), dp(16), dp(16), dp(16))
 
                                                         MDIconButton:
                                                                 icon: "plus"
-                                                                pos_hint: {"top": 1, "right": 1}
+                                                                pos_hint: {"top": 0.98, "right": 0.98}
+                                                                md_bg_color: "white"
                                                                 icon_size: 70
 
                                                         MDLabel:
                                                                 text: "Silicone"
                                                                 font_size: 50
+                                                                theme_text_color: "Custom"
+                                                                text_color: "white"
                                                                 adaptive_size: True
                                                                 pos: "15dp", "15dp"
                                                                 bold: True
                                         MDCard:
                                                 MDRelativeLayout:
+                                                        FitImage:
+                                                                source: "assets/copper.png"
+                                                                pos_hint: {"top": 1}
+                                                                radius: (dp(16), dp(16), dp(16), dp(16))
 
                                                         MDIconButton:
                                                                 icon: "plus"
-                                                                pos_hint: {"top": 1, "right": 1}
+                                                                pos_hint: {"top": 0.98, "right": 0.98}
+                                                                md_bg_color: "white"
                                                                 icon_size: 70
 
                                                         MDLabel:
                                                                 text: "Copper"
                                                                 font_size: 50
+                                                                theme_text_color: "Custom"
+                                                                text_color: "white"
                                                                 adaptive_size: True
                                                                 pos: "15dp", "15dp"
                                                                 bold: True
@@ -337,43 +358,64 @@ ScreenManager:
 
                                         MDCard:
                                                 MDRelativeLayout:
+                                                        FitImage:
+                                                                source: "assets/carbon.png"
+                                                                pos_hint: {"top": 1}
+                                                                radius: (dp(16), dp(16), dp(16), dp(16))
 
                                                         MDIconButton:
                                                                 icon: "plus"
-                                                                pos_hint: {"top": 1, "right": 1}
+                                                                pos_hint: {"top": 0.98, "right": 0.98}
+                                                                md_bg_color: "white"
                                                                 icon_size: 70
 
                                                         MDLabel:
                                                                 text: "Carbon"
                                                                 font_size: 50
+                                                                theme_text_color: "Custom"
+                                                                text_color: "white"
                                                                 adaptive_size: True
                                                                 pos: "15dp", "15dp"
                                                                 bold: True
                                         MDCard:
                                                 MDRelativeLayout:
+                                                        FitImage:
+                                                                source: "assets/foam.png"
+                                                                pos_hint: {"top": 1}
+                                                                radius: (dp(16), dp(16), dp(16), dp(16))
 
                                                         MDIconButton:
                                                                 icon: "plus"
-                                                                pos_hint: {"top": 1, "right": 1}
+                                                                pos_hint: {"top": 0.98, "right": 0.98}
+                                                                md_bg_color: "white"
                                                                 icon_size: 70
 
                                                         MDLabel:
                                                                 text: "Foam"
                                                                 font_size: 50
+                                                                theme_text_color: "Custom"
+                                                                text_color: "white"
                                                                 adaptive_size: True
                                                                 pos: "15dp", "15dp"
                                                                 bold: True
                                         MDCard:
                                                 MDRelativeLayout:
+                                                        FitImage:
+                                                                source: "assets/cobalt.png"
+                                                                pos_hint: {"top": 1}
+                                                                radius: (dp(16), dp(16), dp(16), dp(16))
 
                                                         MDIconButton:
                                                                 icon: "plus"
-                                                                pos_hint: {"top": 1, "right": 1}
+                                                                pos_hint: {"top": 0.98, "right": 0.98}
+                                                                md_bg_color: "white"
                                                                 icon_size: 70
 
                                                         MDLabel:
                                                                 text: "Cobalt"
                                                                 font_size: 50
+                                                                theme_text_color: "Custom"
+                                                                text_color: "white"
                                                                 adaptive_size: True
                                                                 pos: "15dp", "15dp"
                                                                 bold: True
@@ -385,43 +427,64 @@ ScreenManager:
 
                                         MDCard:
                                                 MDRelativeLayout:
+                                                        FitImage:
+                                                                source: "assets/aluminium.png"
+                                                                pos_hint: {"top": 1}
+                                                                radius: (dp(16), dp(16), dp(16), dp(16))
 
                                                         MDIconButton:
                                                                 icon: "plus"
-                                                                pos_hint: {"top": 1, "right": 1}
+                                                                pos_hint: {"top": 0.98, "right": 0.98}
+                                                                md_bg_color: "white"
                                                                 icon_size: 70
 
                                                         MDLabel:
                                                                 text: "Aluminium"
                                                                 font_size: 50
+                                                                theme_text_color: "Custom"
+                                                                text_color: "white"
                                                                 adaptive_size: True
                                                                 pos: "15dp", "15dp"
                                                                 bold: True
                                         MDCard:
                                                 MDRelativeLayout:
+                                                        FitImage:
+                                                                source: "assets/leather.png"
+                                                                pos_hint: {"top": 1}
+                                                                radius: (dp(16), dp(16), dp(16), dp(16))
 
                                                         MDIconButton:
                                                                 icon: "plus"
-                                                                pos_hint: {"top": 1, "right": 1}
+                                                                pos_hint: {"top": 0.98, "right": 0.98}
+                                                                md_bg_color: "white"
                                                                 icon_size: 70
 
                                                         MDLabel:
                                                                 text: "Leather"
                                                                 font_size: 50
+                                                                theme_text_color: "Custom"
+                                                                text_color: "white"
                                                                 adaptive_size: True
                                                                 pos: "15dp", "15dp"
                                                                 bold: True
                                         MDCard:
                                                 MDRelativeLayout:
+                                                        FitImage:
+                                                                source: "assets/lithium.png"
+                                                                pos_hint: {"top": 1}
+                                                                radius: (dp(16), dp(16), dp(16), dp(16))
 
                                                         MDIconButton:
                                                                 icon: "plus"
-                                                                pos_hint: {"top": 1, "right": 1}
+                                                                pos_hint: {"top": 0.98, "right": 0.98}
+                                                                md_bg_color: "white"
                                                                 icon_size: 70
 
                                                         MDLabel:
                                                                 text: "Lithium"
                                                                 font_size: 50
+                                                                theme_text_color: "Custom"
+                                                                text_color: "white"
                                                                 adaptive_size: True
                                                                 pos: "15dp", "15dp"
                                                                 bold: True
