--- a/app.kv
+++ b/app.kv
@@ -493,6 +493,19 @@ ScreenManager:
                                                                 adaptive_size: True
                                                                 pos: "15dp", "15dp"
                                                                 bold: True
+<PurchaseDialog>:
+        orientation: 'vertical'
+        size_hint_y: None
+        height: "100dp"
+        spacing: 20
+        MDTextField:
+                id: amount
+                hint_text: "Enter number between 0~100"
+                input_filter: 'int'
+        MDLabel:
+                id: total_cost
+                text: "Total cost: $0"
+
 
 
 <OrderManager>:
