--- a/app.kv
+++ b/app.kv
@@ -502,6 +502,8 @@ ScreenManager:
                 id: amount
                 hint_text: "Enter number between 0~100"
                 input_filter: 'int'
+                on_type:
+                        root.update_amount_text()
         MDLabel:
                 id: total_cost
                 text: "Total cost: $0"
