working on orders manager

--- a/app.kv
+++ b/app.kv
@@ -527,7 +527,7 @@ ScreenManager:
                                 id: orders_container
                                 orientation: 'vertical'
                                 size_hint_y: None
-                                height: self.minimum_height
+                                height: "300dp"
 
 
 <FinanceManager>:
