haha what am I doing

--- a/app.kv
+++ b/app.kv
@@ -533,6 +533,7 @@ ScreenManager:
                                 size_hint: 1, 0.1
 
                         MDTextField:
+                                id: searchbar
                                 hint_text: "search"
                                 icon_right: "magnify"
                                 size_hint: 0.3, 0.1
